# rust-htmx

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
gpt/: example.py
migrations/2024-01-31-194228_create_posts/: up.sql
migrations/2024-01-31-195136_create_posts/: up.sql
src/: connection.rs  db.rs  main.rs  models.rs  repository.rs  router.rs  views.rs
templates/: base.html  include.html  index.html  timer.html  timer_table.html
templates/blocks/: include.html
templates/macros/: print_timer.html
