[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1" }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-extra = { version="0.9.2", features = ["typed-header"] }
futures = "0.3"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.79"
once_cell = "1.19.0"
